simple-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pvc
  labels:
    failure-domain.beta.kubernetes.io/zone: us-east-1b  # AWS limitation, can't mount between zones
    app: simple-pvc
spec:
  containers:
    - name: sample-go
      image: quay.io/samsung_cnct/example-k8s-storage:0.2
      ports:
      - containerPort: 8080
      volumeMounts:
        - name: simple-pvc
          mountPath: /mnt/pv
  volumes:
    - name: simple-pvc
      persistentVolumeClaim:
        claimName: simple-pvc
