stateful-set.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: stateful-set
spec:
  serviceName: stateful-set
  replicas: 3
  template:
    metadata:
      labels:
        app: stateful-set
    spec:
      containers:
      - name: example-app
        image: quay.io/samsung_cnct/example-k8s-storage:0.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: datadir
          mountPath: /mnt/pv
  volumeClaimTemplates:
  - metadata:
      name: datadir
      annotations:
        volume.alpha.kubernetes.io/storage-class: kubernetes.io/aws-ebs
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
