example-svcs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple-volume
  labels:
    app: simple-volume
spec:
  ports:
    - port: 8080
  selector:
    app: simple-volume
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: simple-pvc
  labels:
    app: simple-pvc
spec:
  ports:
    - port: 8080
  selector:
    app: simple-pvc
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: exclusive-pvc
  labels:
    app: exclusive-pvc
spec:
  ports:
    - port: 8080
  selector:
    app: exclusive-pvc
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  name: exclusive-pvc-failure
  labels:
    app: exclusive-pvc-failure
spec:
  ports:
    - port: 8080
  selector:
    app: exclusive-pvc-failure
  type: LoadBalancer
